--- a/TiendaMusica.Web/TiendaMusica.Web/Views/Albums/Editar.cshtml
+++ b/TiendaMusica.Web/TiendaMusica.Web/Views/Albums/Editar.cshtml
@@ -16,13 +16,14 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">Título:</label> 
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
+            <label class = "control-label col-md-2">Caratula:</label> 
             <div class="col-md-offset-2 col-md-10">
                 <div style="float:left;margin-right:20px">
                     <img width="120" height="120" src="~/Archivos/Thumbnails/@Model.ImagenAlbum" />
@@ -31,12 +32,39 @@
             </div>
         </div>
         <div class="form-group">
+            <label class="control-label col-md-2">Video:</label> 
+            <div class="col-md-offset-2 col-md-10">
+                <video width="320" height="240" controls>
+                    <source src="~/Archivos/mp4/@Model.VideoAlbum" type="video/mp4">
+                </video>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-md-2">Canción:</label> 
+            <div class="col-md-offset-2 col-md-10">
+                <audio controls>
+                    <source src="~/Archivos/mp3/@Model.AudioAlbum" type="audio/mpeg">
+                </audio>
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <label>Seleccione un archivo</label>
                 <input type="file" name="archivo" class="form-control"  />
             </div>
         </div>
-
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <label>Seleccione un video</label>
+                <input type="file" name="video" class="form-control" />
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <label>Seleccione un audio</label>
+                <input type="file" name="audio" class="form-control" />
+            </div>
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
